More show page fixes on mobile

--- a/public/collections-css/show.css
+++ b/public/collections-css/show.css
@@ -10,6 +10,7 @@ img {
     box-shadow: 1px 6px 6px -3px rgba(0, 0, 0, 0.5);
     width: 100%;
     margin-bottom: 10px;
+    min-height: 124px;
 }
 
 .img-lg {
@@ -105,7 +106,10 @@ img {
   
 .card-title {
     margin-bottom: 5px;
-    width: 300px;
+    max-height: 100px;
+    overflow-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .view, .deleteGame {
@@ -145,13 +149,14 @@ img {
 
 .game-btns {
     display: flex;
+    justify-self: end;
 }
 
 .metacritic-rating {
     border: 1px solid white;
     border-radius: 8px;
     width: 30px;
-    padding-right: 4px;
+    padding-left: 4px;
 }
 
 
@@ -266,6 +271,12 @@ img {
         padding-top: 20px;
         padding-right: 20px;
     }
+
+    .metacritic-rating {
+        width: 30px;
+        padding-right: 4px;
+    }
+    
 
     .game-btns {
         justify-content: flex-end;
